...
    android:layout_height="match_parent"
    android:layout_gravity="top|start"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/fragment_note_title"
        tools:text="Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:inputType="text"
        android:padding="8dp"
...
